Добавлены картинки для объявлений, тесты.